// kuranne
// 6800000000

package escapeFromLandmines;

public class Constants {
    private Constants() {}

    // True for assignment
    public static final boolean MINIMAL_MODE = true;
    public static final int MINIMUM_LANDMINE = 5;
    public static final int INITIAL_HEALTH_POINT = 3;
    public static final int HUMAN_PLAYER_AMOUNT = 1;
    public static final int COMPUTER_PLAYER_AMOUNT = 1;
    public static final int BLAST_DAMAGE = 1;
    public static final Model.Vector2 BOARD_SIZE = new Model.Vector2(5, 5);
}
