// kuranne
// 6800000000

package escapeFromLandmines;

import escapeFromLandmines.Model.Vector2;

public interface Selectable {
    Vector2 choose(Vector2 coordinate);
}