// kuranne
// 6800000000

package escapeFromLandmines;

public class TestGame {
    public static void main(String[] args) {
        Operator game = new Operator();
        game.run();
    }
}
